# PeerLess.AI

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt  run.ps1  streamlit_app.py
.antigravity/: rules.md
.streamlit/: config.toml
apps/backend/: Dockerfile  README.md  pyproject.toml  railway.json
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial_schema.py
apps/backend/src/peerless/: __init__.py  config.py  logging_config.py  main.py
apps/backend/src/peerless/agents/: README.md  llm.py  plain_language_summary.py
apps/backend/src/peerless/agents/citation_verifier/: agent.py
apps/backend/src/peerless/agents/statistical_integrity/: agent.py
apps/backend/src/peerless/api/: README.md  __init__.py  findings.py  papers.py  reports.py  schemas.py
apps/backend/src/peerless/orchestrator/: README.md  graph.py
apps/backend/src/peerless/parsing/: README.md  extract.py
apps/backend/src/peerless/reports/: README.md  assemble.py  pdf_export.py
apps/backend/src/peerless/storage/: README.md  database.py  models.py
apps/backend/src/peerless/verification/: README.md  crossref.py  grim.py  regex_extractor.py  statcheck.py
apps/backend/tests/: README.md  test_grim.py  test_regex_extractor.py  test_statcheck.py
docs/: ARCHITECTURE.md  DEMO.md  MASTER_SPEC.md  SAFETY.md
fixtures/: README.md  bad_citation.expected.json  clean_paper.expected.json  grim_violation.expected.json  make_fixtures.py  pvalue_inconsistency.expected.json
n8n/: README.md
scripts/: check_env.sh  checkpoint_1.sh  checkpoint_2.sh  create_sample_pdf.py  demo_upload.py  setup.ps1
(+10 files in other folders)
