[project]
name = "peerless"
version = "0.1.0"
description = "PEERLESS.AI — multi-agent scientific peer-review and research-integrity backend"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "UNLICENSED" }

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Async HTTP
    "httpx>=0.27.0",
    # PDF parsing
    "pymupdf>=1.24.0",
    # LLM orchestration
    "langgraph>=0.1.0",
    "langchain-google-genai>=1.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Cache
    "redis[hiredis]>=5.0.0",
    # Vector DB
    "chromadb>=0.5.0",
    # Scientific computing (GRIM, statcheck)
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    # PDF generation
    "reportlab>=4.2.0",
    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # Logging
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peerless"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
